# scarab

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: scarab.c
